--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crudsinfotech-nodeapp",
+  "name": "psp619-nodeapp",
   "version": "1.0.0",
   "description": "A Hello World HTTP server using Node JS",
   "main": "main.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rchidana/NodeApp"
+    "url": "https://github.com/psp619/Jenkins-and-docker/"
   },
   "keywords": [
     "node",
     "docker",
     "dockerfile"
   ],
-  "author": "crudsinfotechng@gmail.com",
+  "author": "prasadps297@gmail.com",
   "license": "ISC",
   "devDependencies": { "test": ">=0.6.0" }
 }
